--- a/login.html
+++ b/login.html
@@ -11,10 +11,7 @@
 
   <body>
     <div class="boxlogin">
-      <img
-        src="/GitHub-Projects/Login/assets/Shield Logo.png"
-        alt="S.H.I.E.L.D_LOGO"
-      />
+      <img src="/assets/Shield Logo.png" alt="S.H.I.E.L.D_LOGO" />
       <h1>S.H.I.E.L.D</h1>
       <input type="text" placeholder="UserName" /><br /><br />
       <input type="password" placeholder="Password" /><br /><br />
